--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -1,8 +1,9 @@
 //main
-// @import "blocks/breadcrumbs";
+@import "blocks/buttons";
+@import "blocks/socials";
 
 // cards
 // @import "blocks/post-card";
 
 // blocks
-// @import "blocks/about";
+@import "blocks/header";
