add and done footer

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -40,7 +40,7 @@
 
 @font-face {
 	font-weight: 700;
-	font-family: OpenSansCondenced;
+	font-family: OpenSansCondensed;
 	font-style: normal;
 	src:
 		url(assets/fonts/OpenSansCondensed-Bold.woff2) format("woff2"),
