--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -128,6 +128,22 @@ iframe {
 		margin: 0 0.75rem;
 	}
 
+	&--small {
+		position: relative;
+		max-width: 1130px;
+		margin: 0 auto;
+
+		@include to(1200px) {
+			max-width: 100%;
+			margin: 0 1.5rem;
+		}
+
+		@include md {
+			margin: 0 0.75rem;
+		}
+
+	}
+
 	&--large {
 		position: relative;
 		max-width: 1720px;
