--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -1,9 +1,11 @@
 //main
 @import "blocks/buttons";
+@import "blocks/form-elements";
 @import "blocks/socials";
 
 // cards
 // @import "blocks/post-card";
 
 // blocks
+@import "blocks/footer";
 @import "blocks/header";
