add and done modals

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -39,6 +39,16 @@
 }
 
 @font-face {
+	font-weight: 300;
+	font-family: OpenSansCondensed;
+	font-style: normal;
+	src:
+		url(assets/fonts/OpenSansCondensed-Light.woff2) format("woff2"),
+		url(assets/fonts/OpenSansCondensed-Light.woff) format("woff");
+	font-display: swap;
+}
+
+@font-face {
 	font-weight: 700;
 	font-family: OpenSansCondensed;
 	font-style: normal;
