add and done .achievements

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -3,11 +3,13 @@
 @import "blocks/form-elements";
 @import "blocks/modal";
 @import "blocks/socials";
+@import "blocks/title";
 
 // cards
 // @import "blocks/post-card";
 
 // blocks
+@import "blocks/achievements";
 @import "blocks/footer";
 @import "blocks/header";
 @import "blocks/welcome";
