--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -3,6 +3,7 @@
 @import "blocks/form-elements";
 @import "blocks/modal";
 @import "blocks/socials";
+@import "blocks/text-styles";
 @import "blocks/title";
 
 // cards
@@ -12,4 +13,5 @@
 @import "blocks/achievements";
 @import "blocks/footer";
 @import "blocks/header";
+@import "blocks/leading-speaker";
 @import "blocks/welcome";
