add and done .schedule

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -17,4 +17,5 @@
 @import "blocks/footer";
 @import "blocks/header";
 @import "blocks/leading-speaker";
+@import "blocks/schedule";
 @import "blocks/welcome";
