add and done .course-info

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -13,6 +13,7 @@
 
 // blocks
 @import "blocks/achievements";
+@import "blocks/course-info";
 @import "blocks/course-tabs";
 @import "blocks/footer";
 @import "blocks/header";
