add and done .videos-slider

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -19,4 +19,5 @@
 @import "blocks/header";
 @import "blocks/leading-speaker";
 @import "blocks/schedule";
+@import "blocks/videos-slider";
 @import "blocks/welcome";
