--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -19,6 +19,7 @@
 @import "blocks/footer";
 @import "blocks/header";
 @import "blocks/leading-speaker";
+@import "blocks/masters-slider";
 @import "blocks/schedule";
 @import "blocks/videos-slider";
 @import "blocks/welcome";
