add and done .training-pluses

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -22,5 +22,6 @@
 @import "blocks/leading-speaker";
 @import "blocks/masters-slider";
 @import "blocks/schedule";
+@import "blocks/training-pluses";
 @import "blocks/videos-slider";
 @import "blocks/welcome";
