add and done .courses-form

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -15,6 +15,7 @@
 @import "blocks/about-social";
 @import "blocks/achievements";
 @import "blocks/course-cats";
+@import "blocks/course-form";
 @import "blocks/course-info";
 @import "blocks/course-tabs";
 @import "blocks/footer";
