--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -12,6 +12,7 @@
 // @import "blocks/post-card";
 
 // blocks
+@import "blocks/about";
 @import "blocks/about-social";
 @import "blocks/achievements";
 @import "blocks/course-cats";
