--- a/assets/scss/blocks/_text-styles.scss
+++ b/assets/scss/blocks/_text-styles.scss
@@ -31,3 +31,25 @@
 		}
 	}
 }
+
+.st-ul {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	padding-left: 20px;
+
+	@include xs {
+		gap: 15px;
+	}
+
+	li {
+
+		@include xs {
+			font-size: 16px;
+		}
+
+		&::marker {
+			color: var(--tertiary);
+		}
+	}
+}
