--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -19,6 +19,7 @@
 @import "blocks/course-form";
 @import "blocks/course-info";
 @import "blocks/course-tabs";
+@import "blocks/faq";
 @import "blocks/footer";
 @import "blocks/graduates";
 @import "blocks/header";
