add and done 404 page

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -25,6 +25,7 @@
 @import "blocks/header";
 @import "blocks/leading-speaker";
 @import "blocks/masters-slider";
+@import "blocks/not-found";
 @import "blocks/schedule";
 @import "blocks/training-pluses";
 @import "blocks/videos-slider";
