--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -15,29 +15,55 @@
 		padding-top: 20px;
 	}
 
-	// @include xs {
-	// 	padding: 20px 0;
-	// }
+	@include sm {
+		padding: 20px 0;
+		transition: var(--transition);
+	}
+
+	&::before {
+
+		@include sm {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: url(assets/images/main-pattern-bg.jpg) no-repeat 50% / cover;
+			box-shadow: 0 0 20px rgba(#000, 0.3);
+			transform: translateY(-100%);
+			transition: var(--transition);
+			content: "";
+		}
+	}
+
+
+	&.active {
+
+		&::before {
+			transform: translateY(0);
+		}
+
+		.header__menu {
+
+			@include sm {
+				margin: 40px 0 20px;
+			}
+
+			@include xs {
+				margin: 20px 0 10px;
+			}
+		}
+	}
 
 	&__container {
 		display: flex;
 		gap: 20px;
 		align-items: center;
 
-		@include xs {
-			justify-content: space-between;
-		}
-
-		&::before {
-			display: block;
-			flex: 1 0;
-			height: 1px;
-			background-color: var(--fc-light);
-			content: "";
-
-			@include xs {
-				display: none;
-			}
+		@include sm {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			gap: 0 20px;
 		}
 	}
 
@@ -52,7 +78,7 @@
 		background: none;
 		border: none;
 
-		@include xs {
+		@include sm {
 			display: flex;
 		}
 
@@ -115,27 +141,28 @@
 
 	&__logo {
 		display: block;
-		order: -1;
-		width: 365px;
+		flex: 1 1;
+		width: 100%;
+		max-width: 365px;
 		height: auto;
 		aspect-ratio: 1400/288;
 		background: url(assets/images/logo-horizontal.png) no-repeat 50% / contain;
 		transition: var(--transition);
 
 		@include hg {
-			width: 300px;
+			max-width: 300px;
 		}
 
 		@include md {
-			width: 270px;
+			max-width: 270px;
 		}
 
-		@include xs {
+		@include sm {
 			position: absolute;
-			top: 50%;
+			top: 0;
 			left: 50%;
 			width: clamp(7.778rem, -2.407rem + 50.926vw, 13.889rem);
-			transform: translate(-50%, -50%);
+			transform: translate(-50%, 0);
 		}
 
 		@include mouse {
@@ -146,16 +173,76 @@
 		}
 	}
 
+	&__menu {
+		display: flex;
+		flex: 2 0;
+		flex-wrap: wrap;
+		gap: 20px;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+
+		@include sm {
+			grid-column: 2/3;
+			grid-column: span 2;
+			max-height: 0;
+			overflow: hidden;
+			transition: all 0.2s ease-out;
+		}
+
+		.menu-item {
+			flex-shrink: 0;
+
+			@include xs {
+				width: 100%;
+			}
+
+			@include mouse {
+
+				&:hover {
+
+					a {
+						color: var(--primary);
+					}
+				}
+			}
+
+			a {
+				display: block;
+				color: var(--fc-light);
+				font-weight: 700;
+				font-size: 16px;
+				text-transform: uppercase;
+				text-decoration: none;
+				text-shadow: 1px 1px 0 var(--fc-dark);
+				transition: var(--transition);
+
+				@include xs {
+					font-size: 14px;
+					text-align: center;
+				}
+			}
+		}
+
+		.current-menu-item {
+
+			a {
+				color: var(--primary);
+				cursor: default;
+			}
+		}
+	}
+
 	&__phone {
 		font-weight: 600;
 		font-size: 24px;
 		@include ui-link(var(--secondary));
 
-		@include md {
+		@include hg {
 			display: none;
 		}
 
-		@include sm {
+		@include lg {
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -168,10 +255,16 @@
 			border-radius: 50%;
 		}
 
+		@include sm {
+			grid-row: 1/2;
+			grid-column: 2/3;
+			justify-self: end;
+		}
+
 		svg {
 			display: none;
 
-			@include sm {
+			@include lg {
 				display: block;
 				color: var(--fc-light);
 			}
@@ -180,14 +273,14 @@
 
 	&__socials {
 
-		@include xs {
+		@include md {
 			display: none;
 		}
 	}
 
 	&__callback {
 
-		@include sm {
+		@include lg {
 			display: none;
 		}
 	}
