add and done .main-text

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -24,6 +24,7 @@
 @import "blocks/graduates";
 @import "blocks/header";
 @import "blocks/leading-speaker";
+@import "blocks/main-text";
 @import "blocks/masters-slider";
 @import "blocks/not-found";
 @import "blocks/schedule";
