--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -162,4 +162,16 @@ iframe {
 
 .main {
 	margin-bottom: auto;
+
+	&--indent {
+		margin-top: 135px;
+
+		@include md {
+			margin-top: 115px;
+		}
+
+		@include sm {
+			margin-top: 100px;
+		}
+	}
 }
