--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -5,18 +5,14 @@
 	z-index: var(--ui-index-4);
 	width: 100%;
 	height: fit-content;
-	padding-top: clamp(1.667rem, -5rem + 8.333vw, 3.889rem);
-
-	@include hg {
-		padding-top: 30px;
-	}
+	padding: 30px 0;
+	background: url(assets/images/modal-bg.jpg) no-repeat 50% / cover;
 
 	@include lg {
-		padding-top: 20px;
+		padding-top: 20px 0;
 	}
 
 	@include sm {
-		padding: 20px 0;
 		transition: var(--transition);
 	}
 
@@ -36,6 +32,23 @@
 		}
 	}
 
+	&--index {
+		padding: clamp(1.667rem, -5rem + 8.333vw, 3.889rem) 0 0;
+		background: none;
+
+		@include hg {
+			padding: 30px 0 0;
+		}
+
+		@include lg {
+			padding: 20px 0 0;
+		}
+
+		@include sm {
+			padding: 20px 0;
+			transition: var(--transition);
+		}
+	}
 
 	&.active {
 
