--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -9,7 +9,7 @@
 @import "blocks/title";
 
 // cards
-// @import "blocks/post-card";
+@import "blocks/course-card";
 
 // blocks
 @import "blocks/about";
@@ -19,6 +19,7 @@
 @import "blocks/course-form";
 @import "blocks/course-info";
 @import "blocks/course-tabs";
+@import "blocks/courses";
 @import "blocks/faq";
 @import "blocks/footer";
 @import "blocks/graduates";
