--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -174,4 +174,20 @@ iframe {
 			margin-top: 100px;
 		}
 	}
+
+	> .faq-links {
+		padding: 220px 0 180px;
+
+		@include hg {
+			padding: 150px 0 100px;
+		}
+
+		@include sm {
+			padding: 100px 0;
+		}
+
+		@include xs {
+			padding: 80px 0 40px;
+		}
+	}
 }
