--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -20,6 +20,7 @@
 @import "blocks/course-info";
 @import "blocks/course-tabs";
 @import "blocks/courses";
+@import "blocks/faq-links";
 @import "blocks/faq";
 @import "blocks/footer";
 @import "blocks/graduates";
