add and done .faq-master

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -21,6 +21,7 @@
 @import "blocks/course-tabs";
 @import "blocks/courses";
 @import "blocks/faq-links";
+@import "blocks/faq-master";
 @import "blocks/faq";
 @import "blocks/footer";
 @import "blocks/graduates";
