--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -190,4 +190,20 @@ iframe {
 			padding: 80px 0 40px;
 		}
 	}
+
+	> .faq-master {
+		padding: 220px 0 45px;
+
+		@include hg {
+			padding: 150px 0 40px;
+		}
+
+		@include sm {
+			padding: 100px 0 40px;
+		}
+
+		@include xs {
+			padding: 80px 0 40px;
+		}
+	}
 }
