--- a/assets/scss/blocks/_course-info.scss
+++ b/assets/scss/blocks/_course-info.scss
@@ -87,7 +87,7 @@
 		line-height: 1.4;
 
 		@include xs {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
@@ -97,7 +97,7 @@
 
 	&__advantages-label {
 		font-weight: 700;
-		font-size: 20px;
+		font-size: 1.1111rem;
 		line-height: 1.3;
 	}
 
