--- a/assets/scss/blocks/_achievements.scss
+++ b/assets/scss/blocks/_achievements.scss
@@ -75,7 +75,7 @@
 		}
 
 		@include xs {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
@@ -139,11 +139,11 @@
 
 	&__number {
 		font-weight: 700;
-		font-size: 60px;
+		font-size: 3.3333rem;
 		font-family: var(--font-secondary);
 
 		@include hg {
-			font-size: 45px;
+			font-size: 2.5rem;
 		}
 	}
 
@@ -152,7 +152,7 @@
 		font-weight: 600;
 
 		@include hg {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 }
