--- a/assets/scss/blocks/_course-card.scss
+++ b/assets/scss/blocks/_course-card.scss
@@ -52,16 +52,16 @@
 		color: var(--primary);
 
 		@include hg {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
 	&__title {
 		color: var(--secondary);
-		font-size: 28px;
+		font-size: 1.5556rem;
 
 		@include hg {
-			font-size: 22px;
+			font-size: 1.2222rem;
 		}
 	}
 }
