--- a/assets/scss/blocks/_faq-links.scss
+++ b/assets/scss/blocks/_faq-links.scss
@@ -115,7 +115,7 @@
 		padding-bottom: 5px;
 		color: var(--fc-light);
 		font-weight: 700;
-		font-size: 28px;
+		font-size: 1.5556rem;
 		font-family: var(--font-secondary);
 		text-align: center;
 		text-transform: uppercase;
@@ -125,7 +125,7 @@
 		@include hg {
 			width: fit-content;
 			padding: 0 10px 5px;
-			font-size: 22px;
+			font-size: 1.2222rem;
 		}
 	}
 
