--- a/assets/scss/blocks/_faq-master.scss
+++ b/assets/scss/blocks/_faq-master.scss
@@ -127,7 +127,7 @@
 		}
 
 		@include xs {
-			width: clamp(8.333rem, -0.926rem + 46.296vw, 13.889rem);
+			width: clamp(7.5rem, 6.346rem + 6.41vw, 12.5rem);
 		}
 
 		img {
@@ -214,7 +214,7 @@
 
 	&__user-name,
 	&__user-date {
-		font-size: 16px;
+		font-size: 0.8889rem;
 	}
 
 	&__user-photo {
@@ -236,7 +236,7 @@
 		line-height: 1.3;
 
 		@include md {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
