--- a/assets/scss/blocks/_faq.scss
+++ b/assets/scss/blocks/_faq.scss
@@ -117,7 +117,7 @@
 
 		@include xs {
 			gap: 30px;
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 
 		&.active {
@@ -149,18 +149,17 @@
 		padding-left: 50px;
 		overflow: hidden;
 		font-weight: 400;
-		font-size: 20px;
+		font-size: 1rem;
 		line-height: 1.2;
 		transition: var(--transition);
 
 		@include sm {
 			padding-left: 20px;
-			font-size: 18px;
 		}
 
 		@include xs {
 			padding-left: 0;
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
