--- a/assets/scss/blocks/_footer.scss
+++ b/assets/scss/blocks/_footer.scss
@@ -47,19 +47,19 @@
 	&__label {
 		max-width: 580px;
 		font-weight: 700;
-		font-size: 40px;
+		font-size: 2rem;
 		font-family: var(--font-secondary);
 		line-height: 1.3;
 		text-transform: uppercase;
 
 		@include sm {
 			max-width: none;
-			font-size: 34px;
+			font-size: 1.8889rem;
 			text-align: center;
 		}
 
 		@include xs {
-			font-size: 24px;
+			font-size: 1.3333rem;
 			line-height: 1.15;
 		}
 
@@ -75,7 +75,7 @@
 		max-width: 280px;
 		margin: -40px 0 0 300px;
 		font-weight: 400;
-		font-size: 20px;
+		font-size: 1rem;
 		font-family: var(--font-tertiary);
 
 		@include sm {
@@ -85,7 +85,7 @@
 		}
 
 		@include xs {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 	}
 
@@ -201,7 +201,7 @@
 		max-width: 380px;
 		color: #d9d9d9;
 		font-weight: 400;
-		font-size: 14px;
+		font-size: 0.7778rem;
 		line-height: 1.3;
 
 		@include hg {
@@ -230,7 +230,7 @@
 	&__phone {
 		flex-shrink: 0;
 		font-weight: 600;
-		font-size: 24px;
+		font-size: 1.3333rem;
 		@include ui-link(var(--fc-light));
 
 		@include md {
@@ -249,7 +249,7 @@
 	&__policy {
 		width: min-content;
 		font-weight: 400;
-		font-size: 14px;
+		font-size: 0.7778rem;
 		line-height: 1.3;
 		@include ui-link(#bebebe);
 
