--- a/assets/scss/blocks/_leading-speaker.scss
+++ b/assets/scss/blocks/_leading-speaker.scss
@@ -49,11 +49,11 @@
 	&__title-text {
 		margin-bottom: 0;
 		color: var(--secondary);
-		font-size: 40px;
+		font-size: 2.2222rem;
 	}
 
 	&__title-job {
-		font-size: 20px;
+		font-size: 1.1111rem;
 	}
 
 	&__text,
@@ -61,7 +61,7 @@
 		line-height: 1.3;
 
 		@include xs {
-			font-size: 16px;
+			font-size: 0.8889rem;
 			line-height: 1.2;
 		}
 	}
