--- a/assets/scss/blocks/_masters-slider.scss
+++ b/assets/scss/blocks/_masters-slider.scss
@@ -85,24 +85,24 @@
 	&__item-name {
 		color: var(--secondary);
 		font-weight: 700;
-		font-size: 28px;
+		font-size: 1.5556rem;
 		font-family: var(--font-secondary);
 		text-transform: uppercase;
 
 		@include lg {
-			font-size: 24px;
+			font-size: 1.3333rem;
 		}
 
 		@include sm {
-			font-size: 22px;
+			font-size: 1.2222rem;
 		}
 	}
 
 	&__item-text {
-		font-size: 16px;
+		font-size: 0.8889rem;
 
 		@include sm {
-			font-size: 14px;
+			font-size: 0.7778rem;
 		}
 	}
 }
