--- a/assets/scss/blocks/_text-styles.scss
+++ b/assets/scss/blocks/_text-styles.scss
@@ -23,7 +23,7 @@
 	}
 
 	&__text {
-		font-size: 16px;
+		font-size: 0.8889rem;
 		line-height: 1.5;
 
 		@include hg {
@@ -45,7 +45,7 @@
 	li {
 
 		@include xs {
-			font-size: 16px;
+			font-size: 0.8889rem;
 		}
 
 		&::marker {
