--- a/assets/scss/blocks/_faq-master.scss
+++ b/assets/scss/blocks/_faq-master.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	padding: 75px 0;
 	color: var(--fc-light);
-	background: var(--secondary) linear-gradient(to bottom, #171c23 0%, #171c23 40%, rgba(#0c112a, 0) 100%) no-repeat;
+	// background: var(--secondary) linear-gradient(to bottom, #171c23 0%, #171c23 40%, rgba(#0c112a, 0) 100%) no-repeat;
 
 	&::before {
 		position: absolute;
@@ -10,8 +10,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: url(assets/images/green-pattern-bg.jpg) no-repeat 50% / cover;
-		opacity: 0.15;
+		background: url(assets/images/main-pattern-bg.jpg) no-repeat 50% / cover;
+		// opacity: 0.15;
 		content: "";
 	}
 
