--- a/assets/scss/blocks/_footer.scss
+++ b/assets/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
 	position: relative;
-	padding-top: 150px;
+	// padding-top: 150px;
 	color: var(--fc-light);
 	background: #000;
 
@@ -26,118 +26,118 @@
 		}
 	}
 
-	&__form-container {
+	// &__form-container {
 
-		&::before {
-			position: absolute;
-			top: 20px;
-			right: 0;
-			width: 120px;
-			height: 120px;
-			background: url(assets/images/logo-main.png) no-repeat 50% / contain;
-			opacity: 0.7;
-			content: "";
+	// 	&::before {
+	// 		position: absolute;
+	// 		top: 20px;
+	// 		right: 0;
+	// 		width: 120px;
+	// 		height: 120px;
+	// 		background: url(assets/images/logo-main.png) no-repeat 50% / contain;
+	// 		opacity: 0.7;
+	// 		content: "";
 
-			@include sm {
-				display: none;
-			}
-		}
-	}
+	// 		@include sm {
+	// 			display: none;
+	// 		}
+	// 	}
+	// }
 
-	&__label {
-		max-width: 580px;
-		font-weight: 700;
-		font-size: 2rem;
-		font-family: var(--font-secondary);
-		line-height: 1.3;
-		text-transform: uppercase;
+	// &__label {
+	// 	max-width: 580px;
+	// 	font-weight: 700;
+	// 	font-size: 2rem;
+	// 	font-family: var(--font-secondary);
+	// 	line-height: 1.3;
+	// 	text-transform: uppercase;
 
-		@include sm {
-			max-width: none;
-			font-size: 1.8889rem;
-			text-align: center;
-		}
+	// 	@include sm {
+	// 		max-width: none;
+	// 		font-size: 1.8889rem;
+	// 		text-align: center;
+	// 	}
 
-		@include xs {
-			font-size: 1.3333rem;
-			line-height: 1.15;
-		}
+	// 	@include xs {
+	// 		font-size: 1.3333rem;
+	// 		line-height: 1.15;
+	// 	}
 
-		br {
+	// 	br {
 
-			@include sm {
-				display: none;
-			}
-		}
-	}
+	// 		@include sm {
+	// 			display: none;
+	// 		}
+	// 	}
+	// }
 
-	&__small-label {
-		max-width: 280px;
-		margin: -40px 0 0 300px;
-		font-weight: 400;
-		font-size: 1rem;
-		font-family: var(--font-tertiary);
+	// &__small-label {
+	// 	max-width: 280px;
+	// 	margin: -40px 0 0 300px;
+	// 	font-weight: 400;
+	// 	font-size: 1rem;
+	// 	font-family: var(--font-tertiary);
 
-		@include sm {
-			max-width: none;
-			margin: 15px 0 0;
-			text-align: center;
-		}
+	// 	@include sm {
+	// 		max-width: none;
+	// 		margin: 15px 0 0;
+	// 		text-align: center;
+	// 	}
 
-		@include xs {
-			font-size: 0.8889rem;
-		}
-	}
+	// 	@include xs {
+	// 		font-size: 0.8889rem;
+	// 	}
+	// }
 
-	&__form {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		gap: 15px 10px;
-		margin-top: 40px;
+	// &__form {
+	// 	display: grid;
+	// 	grid-template-columns: repeat(3, 1fr);
+	// 	gap: 15px 10px;
+	// 	margin-top: 40px;
 
-		@include md {
-			grid-template-columns: 1fr 1fr;
-			align-items: center;
-		}
+	// 	@include md {
+	// 		grid-template-columns: 1fr 1fr;
+	// 		align-items: center;
+	// 	}
 
-		@include sm {
-			margin-top: 30px;
-		}
+	// 	@include sm {
+	// 		margin-top: 30px;
+	// 	}
 
-		@include xs {
-			display: flex;
-			flex-direction: column;
-		}
-	}
+	// 	@include xs {
+	// 		display: flex;
+	// 		flex-direction: column;
+	// 	}
+	// }
 
-	&__form-policy {
+	// &__form-policy {
 
-		@include md {
-			grid-column: span 2;
-			align-items: center;
-			order: 1;
-			margin: 10px auto 0;
-		}
+	// 	@include md {
+	// 		grid-column: span 2;
+	// 		align-items: center;
+	// 		order: 1;
+	// 		margin: 10px auto 0;
+	// 	}
 
-		@include sm {
-			align-items: flex-start;
-			max-width: 300px;
-		}
-	}
+	// 	@include sm {
+	// 		align-items: flex-start;
+	// 		max-width: 300px;
+	// 	}
+	// }
 
-	&__submit {
-		grid-column: 3/4;
-		width: 100%;
+	// &__submit {
+	// 	grid-column: 3/4;
+	// 	width: 100%;
 
-		@include md {
-			grid-column: auto;
-		}
-	}
+	// 	@include md {
+	// 		grid-column: auto;
+	// 	}
+	// }
 
 	&__info {
 		position: relative;
 		z-index: var(--ui-index-1);
-		margin-top: 70px;
+		// margin-top: 70px;
 		padding: 70px 0;
 		background: rgba(#000, 0.5);
 
@@ -146,7 +146,7 @@
 		}
 
 		@include sm {
-			margin-top: 0;
+			// margin-top: 0;
 			background: none;
 		}
 	}
