add and done .schedule-table, small changes

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -30,6 +30,7 @@
 @import "blocks/main-text";
 @import "blocks/masters-slider";
 @import "blocks/not-found";
+@import "blocks/schedule-table";
 @import "blocks/schedule";
 @import "blocks/training-pluses";
 @import "blocks/videos-slider";
