--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -167,10 +167,6 @@
 		transition: var(--transition);
 
 		@include hg {
-			max-width: 300px;
-		}
-
-		@include md {
 			max-width: 270px;
 		}
 
@@ -256,7 +252,7 @@
 
 	&__phone {
 		font-weight: 600;
-		font-size: 1.3333rem;
+		font-size: 1.2222rem;
 		@include ui-link(var(--secondary));
 
 		@include hg {
@@ -280,6 +276,10 @@
 			grid-row: 1/2;
 			grid-column: 2/3;
 			justify-self: end;
+		}
+
+		&--bright {
+			color: var(--tertiary);
 		}
 
 		svg {
