--- a/assets/scss/blocks/_faq-master.scss
+++ b/assets/scss/blocks/_faq-master.scss
@@ -1,60 +1,13 @@
 .faq-master {
 	position: relative;
-	padding: 75px 0;
-	color: var(--fc-light);
-	background: url(assets/images/main-pattern-bg.jpg) repeat-y top left / 100%;
-	// background: var(--secondary) linear-gradient(to bottom, #171c23 0%, #171c23 40%, rgba(#0c112a, 0) 100%) no-repeat;
-
-	// &::before {
-		// position: absolute;
-		// top: 0;
-		// left: 0;
-		// width: 100%;
-		// height: 100%;
-		// background: url(assets/images/main-pattern-bg.jpg) no-repeat 50% / cover;
-		// opacity: 0.15;
-		// content: "";
-	// }
+	margin: 75px 0;
 
 	@include hg {
-		padding: 60px 0;
+		margin: 60px 0;
 	}
 
 	@include xs {
-		padding: 40px 0;
-	}
-
-	&__container {
-		padding-bottom: 700px;
-
-		@include hg {
-			padding-bottom: 350px;
-		}
-
-		@include xs {
-			padding-bottom: 300px;
-		}
-
-		&::before {
-			position: absolute;
-			bottom: 0;
-			left: 50%;
-			width: 400px;
-			height: auto;
-			aspect-ratio: 1/1;
-			background: url(assets/images/logo-main.png) no-repeat 50% / cover;
-			transform: translateX(-50%);
-			opacity: 0.2;
-			content: "";
-
-			@include hg {
-				width: 250px;
-			}
-
-			@include xs {
-				width: 200px;
-			}
-		}
+		margin: 40px 0;
 	}
 
 	&__wrapper {
@@ -72,38 +25,9 @@
 	}
 
 	&__title {
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: fit-content;
-		min-height: 200px;
-		margin: 0 auto;
-
-		@include hg {
-			min-height: 150px;
-		}
-
-		@include sm {
-			min-height: auto;
-		}
-
-		&::before {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			width: auto;
-			height: 100%;
-			aspect-ratio: 1/1;
-			background: url(assets/images/logo-main.png) no-repeat 50% / cover;
-			transform: translate(-50%, -55%);
-			opacity: 0.2;
-			content: "";
-
-			@include sm {
-				display: none;
-			}
-		}
+		align-self: end;
+		color: var(--fc-dark);
+		text-align: center;
 	}
 
 	&__photo {
@@ -116,7 +40,7 @@
 		height: auto;
 		aspect-ratio: 1/1;
 		padding: 10px;
-		border: 1px solid var(--fc-light);
+		border: 1px solid var(--fc-dark);
 		border-radius: 5px;
 
 		@include hg {
@@ -140,6 +64,7 @@
 	}
 
 	&__modal {
+		align-self: start;
 		width: 100%;
 		max-width: 350px;
 		margin: 0 auto;
@@ -162,7 +87,7 @@
 
 	&__item {
 		padding-bottom: 15px;
-		border-bottom: 1px solid var(--fc-light);
+		border-bottom: 1px solid var(--fc-dark);
 	}
 
 	&__button {
@@ -170,7 +95,6 @@
 		gap: 30px;
 		align-items: center;
 		width: 100%;
-		color: var(--fc-light);
 		background: none;
 		border: none;
 		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
