--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -164,10 +164,10 @@ iframe {
 	margin-bottom: auto;
 
 	&--indent {
-		margin-top: 120px;
+		margin-top: 115px;
 
-		@include md {
-			margin-top: 115px;
+		@include lg {
+			margin-top: 105px;
 		}
 
 		@include sm {
