--- a/assets/scss/blocks/_faq-master.scss
+++ b/assets/scss/blocks/_faq-master.scss
@@ -1,13 +1,25 @@
 .faq-master {
 	position: relative;
-	margin: 75px 0;
+	padding: 75px 0;
+	color: var(--fc-light);
+	background: url(assets/images/green-pattern-bg.jpg) repeat-y 50% top / 100%;
 
 	@include hg {
-		margin: 60px 0;
+		padding: 60px 0;
 	}
 
 	@include xs {
-		margin: 40px 0;
+		padding: 40px 0;
+	}
+
+	&::before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(#35565b, 0.93);
+		content: "";
 	}
 
 	&__wrapper {
@@ -25,9 +37,38 @@
 	}
 
 	&__title {
-		align-self: end;
-		color: var(--fc-dark);
-		text-align: center;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: fit-content;
+		min-height: 200px;
+		margin: 0 auto;
+
+		@include hg {
+			min-height: 150px;
+		}
+
+		@include sm {
+			min-height: auto;
+		}
+
+		&::before {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: auto;
+			height: 100%;
+			aspect-ratio: 1/1;
+			background: url(assets/images/logo-main.png) no-repeat 50% / cover;
+			transform: translate(-50%, -55%);
+			opacity: 0.2;
+			content: "";
+
+			@include sm {
+				display: none;
+			}
+		}
 	}
 
 	&__photo {
@@ -40,7 +81,7 @@
 		height: auto;
 		aspect-ratio: 1/1;
 		padding: 10px;
-		border: 1px solid var(--fc-dark);
+		border: 1px solid var(--fc-light);
 		border-radius: 5px;
 
 		@include hg {
@@ -64,7 +105,6 @@
 	}
 
 	&__modal {
-		align-self: start;
 		width: 100%;
 		max-width: 350px;
 		margin: 0 auto;
@@ -87,7 +127,7 @@
 
 	&__item {
 		padding-bottom: 15px;
-		border-bottom: 1px solid var(--fc-dark);
+		border-bottom: 1px solid var(--fc-light);
 	}
 
 	&__button {
@@ -95,6 +135,7 @@
 		gap: 30px;
 		align-items: center;
 		width: 100%;
+		color: var(--fc-light);
 		background: none;
 		border: none;
 		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
