--- a/assets/scss/blocks/_schedule-table.scss
+++ b/assets/scss/blocks/_schedule-table.scss
@@ -1,8 +1,8 @@
 .schedule-table {
-	margin: 75px 0 30px;
+	margin: 60px 0;
 
 	@include hg {
-		margin: 50px 0 30px;
+		margin: 45px 0 30px;
 	}
 
 	@include xs {
