--- a/assets/scss/blocks/_welcome.scss
+++ b/assets/scss/blocks/_welcome.scss
@@ -20,6 +20,7 @@
 
 		@include xs {
 			align-items: flex-start;
+			min-height: auto;
 			padding: 140px 0 40px;
 		}
 
@@ -180,8 +181,8 @@
 			margin: 0 auto;
 		}
 
-		@include xs {
-			max-width: 100px;
+		@include sm {
+			max-width: 230px;
 		}
 
 		&::before {
@@ -200,11 +201,7 @@
 			}
 
 			@include sm {
-				width: 250px;
-			}
-
-			@include xs {
-				width: 200px;
+				width: 330px;
 			}
 		}
 
@@ -257,7 +254,7 @@
 		}
 
 		@include xs {
-			flex-direction: column;
+			display: none;
 		}
 	}
 
@@ -284,11 +281,6 @@
 			flex-basis: 270px;
 		}
 
-		@include xs {
-			flex-basis: 120px;
-			border-bottom: 1px solid #c4c4c4;
-		}
-
 		&:last-child {
 			border: none;
 		}
@@ -308,10 +300,6 @@
 
 		@include hg {
 			font-size: 0.8889rem;
-		}
-
-		@include xs {
-			max-width: 220px;
 		}
 	}
 }
