add and done .blog

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -9,12 +9,14 @@
 @import "blocks/title";
 
 // cards
+@import "blocks/blog-card";
 @import "blocks/course-card";
 
 // blocks
 @import "blocks/about";
 @import "blocks/about-social";
 @import "blocks/achievements";
+@import "blocks/blog";
 @import "blocks/course-cats";
 @import "blocks/course-form";
 @import "blocks/course-info";
