--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -1,5 +1,6 @@
 //main
 @import "blocks/animations";
+@import "blocks/blog-tags";
 @import "blocks/buttons";
 @import "blocks/form-elements";
 @import "blocks/modal";
@@ -16,6 +17,7 @@
 @import "blocks/about";
 @import "blocks/about-social";
 @import "blocks/achievements";
+@import "blocks/blog-post";
 @import "blocks/blog";
 @import "blocks/course-cats";
 @import "blocks/course-form";
